Fix z-index for timepicker
ERM#17054

[3.2]

--- a/resources/stylesheets/ext.bluespice.pageformsconnector.less
+++ b/resources/stylesheets/ext.bluespice.pageformsconnector.less
@@ -7,4 +7,7 @@ body.mediawiki.x-body {
 			}
 		}
 	}
+	.PF_timepicker {
+		z-index: 5 !important;
+	}
 }
